--- a/PracticeWeb.WebUI/Views/Home/ProductDetail.cshtml
+++ b/PracticeWeb.WebUI/Views/Home/ProductDetail.cshtml
@@ -11,7 +11,7 @@
 <div class="row panel">
     <div class="col-md-6 col-sm-6 col-xs-6">
         <div class="mx-auto d-block" style="margin:20px; max-width: 20rem">
-            <img class="img-fluid" src=~/@Model.CoverImagePath alt="Photo" style="height: auto; width: auto; display: block;" />
+            <img class="img-fluid" src=@Model.CoverImagePath alt="Photo" style="height: auto; width: auto; display: block;" />
         </div>
     </div>
     <div class="col-md-6 col-sm-6 col-xs-6" style="margin-top:20px">
