--- a/PracticeWeb.WebUI/Views/RoleAdmin/Index.cshtml
+++ b/PracticeWeb.WebUI/Views/RoleAdmin/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PracticeWeb.WebUI.Infrastructure;
-@using Practice.Domain.Entities;
+﻿@using Practice.Domain.Entities;
 @model IEnumerable<AppRole>
 
 @{
@@ -16,7 +15,7 @@
         <h3>Roles</h3>
     </div>
     <table class="table table-striped">
-        <tr><th>ID</th><th>Name</th><th>Users</th><th></th></tr>
+        <tr><th>ID</th><th>Name</th><th>Users</th><th>Actions</th></tr>
         @if (Model.Count() == 0)
         {
             <tr><td colspan="4" class="text-center">No Roles</td></tr>
@@ -36,19 +35,18 @@
                         else
                         {
                             <p>
-                                @string.Join(", ", role.Users.Select(x =>
-                             Html.GetUserName(x.UserId)))
+                                @string.Join(", ", role.Users.Select(x => Html.GetUserName(x.UserId)))
                             </p>
                         }
                     </td>
                     <td>
-                        @using (Html.BeginForm("Delete", "RoleAdmin",
-                            new { id = role.Id }))
-                        {
-                            @Html.ActionLink("編輯", "Edit", new { id = role.Id },
-                                    new { @class = "btn btn-outline-primary" })
-                            <button class="btn btn-outline-danger" type="submit">刪除</button>
-                        }
+                        <div class="input-group">
+                            @Html.ActionLink("編輯", "Edit", new { id = role.Id }, new { @class = "btn btn-outline-primary" })
+                            @using (Html.BeginForm("Delete", "RoleAdmin", new { id = role.Id }))
+                            {
+                                <button class="btn btn-outline-danger" type="submit">刪除</button>
+                            }
+                        </div>
                     </td>
                 </tr>
             }
